# oop

./: .gitignore  CMakeLists.txt  README.md
include/: oop1.h
laba1/src/: oop1.cpp
src/: main.cpp
test/: test_oop1.cpp
